syntax = "proto3";

option java_multiple_files = true;
option java_package = "akka.inspection.grpc";
option java_outer_classname = "ActorInspectionProto";

package actorinspection;

service ActorInspectionService {
    rpc RequestQueryableActors (QueryableActorsRequest) returns (QueryableActorsResponse) {}
    rpc RequestActorGroups (ActorGroupsRequest) returns (ActorGroupsResponse) {}
    rpc RequestActorKeys (ActorKeysRequest) returns (ActorKeysResponse) {}
}

message QueryableActorsRequest {
    string id = 1;
}
message QueryableActorsResponse {
    repeated string queryable = 1;
}


message ActorGroupsRequest {
    string id = 1;
    string actor = 2;
}
message ActorGroupsResponse {
    message Groups {
        repeated string names = 1;
    }

    oneof groups_res {
        Groups success = 1;
        string failure = 2;
    }
}

message ActorKeysRequest {
    string id = 1;
    string actor = 2;
}
message ActorKeysResponse {
    message Keys {
        repeated string values = 1;
    }

    oneof keys_res {
        Keys success = 1;
        string failure = 2;
    }
}

